@@ -1,3 +1,6 @@
+2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/PyDO/operators.py (SET): added support for IN.
 
 2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>
 
